# 6s_software_doc_design_lab_4

./: pyproject.toml
6s_software_doc_design_lab_4/: __main__.py
6s_software_doc_design_lab_4/strategies/: __init__.py  send_text.py  send_text_console.py  send_text_kafka.py
6s_software_doc_design_lab_4/utils/: __init__.py
